# localplay-mcp-server

./: Dockerfile  LICENSE  README.md  pyproject.toml  server.py  test.py
localplay_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
