[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localplay-mcp-server"
version = "0.1.0"
description = "LocalPlay MCP Server for mouse control functionality"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyautogui>=0.9.54",
    "fastapi>=0.105.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
] 
